--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-faker~=7.0.1
-pandas~=1.2.3
+faker==19.3.0
+pandas~=2.0.3
+requests~=2.31.0
+PyYAML==6.0.1
+tqdm==4.66.1
+setuptools~=68.0.0
+numpy==1.25.2
+mypy
+black
 
-requests~=2.25.1
-PyYAML~=5.4.1
-tqdm~=4.60.0
-setuptools~=54.2.0
-numpy>1.22
+pandas-stubs
+types-requests
+types-PyYAML
+types-tqdm
+types-setuptools
